test/official_tests/operator/add_bool_num.lox
true + 123; // error: {"line":1,"message":"Operator '+': incompatible types 'boolean' and 'number'","type":"RuntimeError"}
